Grace/tests/gibbs/errors/t032.grace
// ERROR = P1023
method foo(a)bar(b) {
    print(a + b)
}
foo(3)bar(5
